name:                TripleTown
version:             0.1.0.0
synopsis:            VTY implementation of triple town
description:         VTY implementation of triple town
homepage:            http://github.com/glguy/TripleTown
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2012 Eric Mertens
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable TripleTown
  main-is:             TripleTown.hs
  ghc-options: -threaded
  build-depends:       base,
                       vty >=5.15 && <5.16,
                       array >=0.4 && <0.6, containers, random
