cabal-version:       2.2
name:                TripleTown
version:             0.1.0.0
synopsis:            VTY implementation of triple town
description:         VTY implementation of triple town
homepage:            http://github.com/glguy/TripleTown
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2012 Eric Mertens
category:            Game
build-type:          Simple

executable TripleTown
  main-is:             TripleTown.hs
  other-modules:
    Art
    GameLogic
    Shuffle
    Types
  ghc-options: -threaded
  default-language: Haskell2010
  build-depends:
    base,
    vty        ^>=5.25.1,
    array      ^>=0.5,
    containers ^>=0.6,
    random     ^>=1.1,
